--- a/styles.css
+++ b/styles.css
@@ -1,157 +1,156 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin:     0;
+    padding:    0;
     box-sizing: border-box;
 }
 
 :root {
-    --text-color: white;
-    --bg-url: url(./assets/bg-mobile.jpg);
-    --stroke-color: rgba(255, 255, 255, 0.5);
-    --surface-color: rgba(255, 255, 255, 0.05);
+    --text-color:          white;
+    --bg-url:                url(./assets/bg-mobile.jpg);
+    --stroke-color:        rgba(255, 255, 255, 0.5);
+    --surface-color:       rgba(255, 255, 255, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
-    --highlight-color: rgba(255, 255, 255, 0.2);
-    --switch-bg-url: url(./assets/moon-stars.svg);
+    --highlight-color:     rgba(255, 255, 255, 0.2);
+    --switch-bg-url:         url(./assets/moon-stars.svg);
 }
 
 .light {
-    --text-color: black;
-    --bg-url: url(./assets/bg-mobile-light.jpg);
-    --stroke-color: rgba(0, 0, 0, 0.5);
-    --surface-color: rgba(0, 0, 0, 0.05);
+    --text-color:          black;
+    --bg-url:                url(./assets/bg-mobile-light.jpg);
+    --stroke-color:        rgba(0, 0, 0, 0.5);
+    --surface-color:       rgba(0, 0, 0, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
-    --highlight-color: rgba(0, 0, 0, 0.1);
-    --switch-bg-url: url(./assets/sun.svg);
+    --highlight-color:     rgba(0, 0, 0, 0.1);
+    --switch-bg-url:         url(./assets/sun.svg);
 }
 
 body {
-    background: var(--bg-url)
-    no-repeat top center/cover;
+    background:              var(--bg-url)
+                             no-repeat top center/cover;
+    height:                  100vh;
 }
 
 body * {
-    font-family: 'Inter', sans-serif;
-    color: var(--text-color);
+    font-family:            'Inter', sans-serif;
+    color:                   var(--text-color);
 }
 
 
 #container {
-    width: 360px;
-    margin: 56px auto 0px;
-    padding: 0 24px;
+    width:                  100%;
+    max-width:              500px;
+    margin:                 56px auto 0px;
+    padding:                0 24px;
 }
 
 #profile {
-    text-align: center;
-    padding: 24px;
+    text-align:            center;
+    padding:               24px;
 }
 
 #profile img {
-    width: 112px;
+    width:                 112px;
 }
 
 #profile p {
-    font-weight: 500;
-    line-height: 24px;
-    margin-top:  8px;
+    font-weight:           500;
+    line-height:           24px;
+    margin-top:            8px;
 }
 
 #switch {
-    position: relative;
-    width:        64px;
+    position:              relative;
+    width:                 64px;
 
-    margin:   4px auto;
+    margin:                4px auto;
 }
 
 .light #switch button {
     right:      0;
-    left: initial;
+    left:       initial;
 }
 
 #switch button {
-    width: 32px;
-    height: 32px;
-    background: white var(--switch-bg-url) no-repeat center;
-    border: 0;
+    width:         32px;
+    height:        32px;
+    background:  white var(--switch-bg-url) no-repeat center;
+    border:        0;
     border-radius: 50%;
 
-    top: 50%;
-    left: 0;
-    position: absolute;
-    z-index: 1;
+    top:       50%;
+    left:      0;
+    position:  absolute;
+    z-index:   1;
     transform: translateY(-50%);
 
 }
 
 #switch span {
     display: block;
-    width: 64px;
-    height: 24px;
+    width:   64px;
+    height:  24px;
 
     background: var(--surface-color);
 
-    border: 1px solid var(--stroke-color);
-    backdrop-filter: blur(4px);
+    border:                  1px solid var(--stroke-color);
+    backdrop-filter:         blur(4px);
     -webkit-backdrop-filter: blur(4px);
 
-    border-radius: 9999px;
+    border-radius:           9999px;
 }
 
 ul {
-    list-style: none;
+    list-style:              none;
 
-    display: flex;
+    display:        flex;
     flex-direction: column;
-    gap: 16px;
+    gap:            16px;
 
-    padding: 24px 0;
+    padding:        24px 0;
 }
 
 ul li a{
-    display: flex;
-    align-items: center;
+    display:         flex;
+    align-items:     center;
     justify-content: center;
     
-    padding: 16px 24px;
+    padding:         16px 24px;
 
-    background: var(--surface-color);
-    border: 1px solid var(--stroke-color);
-    border-radius: 8px;
+    background:       var(--surface-color);
+    border:           1px solid var(--stroke-color);
+    border-radius:    8px;
 
-    backdrop-filter: blur(4px);
+    backdrop-filter:         blur(4px);
     -webkit-backdrop-filter: blur(4px);
 
     text-decoration: none;
-    font-weight: 500;
+    font-weight:     500;
 
-    transition: background 0.7s;
+    transition:      background 0.7s;
 }
 
 ul li a:hover {
     background: var(--surface-color-hover);
-    border: 1.5px solid var(--text-color);
+    border:     1.5px solid var(--text-color);
 }
 
 #social-links {
-    display: flex;
-
+    display:         flex;
     justify-content: center;
-
-    padding: 24px 0;
-
-    font-size: 24px;
+    padding:         24px 0;
+    font-size:       24px;
 }
 
 #social-links a {
-    display: flex;
-    align-items: center;
+    display:         flex;
+    align-items:     center;
     justify-content: center;
 
     border-radius: 50%;
 
-    padding: 16px;
+    padding:       16px;
 
-    transition: background 0.5s;
+    transition:    background 0.5s;
 }
 
 #social-links a:hover {
@@ -162,4 +161,14 @@ footer {
     padding:    24px;
     text-align: center;
     font-size:  14px;
+}
+
+@media (min-width: 720px) {
+    :root {
+        --bg-url: url(./assets/bg-desktop.jpg)
+    }
+
+    .light {
+        --bg-url: url(./assets/bg-desktop-light.jpg)
+    }
 }
